Upgrade Spring boot to v4.0.5, Add SessionService, add RememberMeSessionPopulationFilter, Migrate products entity to use charset: utf8mb4, upgrade README, small improvements